--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@
   transition: all 0.2s ease-out;
 }
 
+#contact:hover {
+  cursor: pointer;
+}
+
 .menu-toggle .bar {
   width: 25px;
   height: 3px;
@@ -345,4 +349,80 @@ footer {
 
 footer > p {
   color: var(--white);
+}
+
+/*contact form modal*/
+.form-modal-container {
+  display: none;
+  position: fixed;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  z-index: 5;
+  top: 12vh;
+  left: 0;
+  width: 100%;
+  height: 88vh;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.form-modal-content {
+  background-color: #fff;
+  margin: 0 auto;
+  padding: 8px;
+  border: 1px solid #999;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-modal-content > h3 {
+  margin: 3%;
+  color: var(--lightgray);
+}
+.field {
+  margin-bottom: 10px;
+}
+
+.field label {
+  display: block;
+  font-size: 12px;
+  color: #999;
+}
+
+.field input {
+  display: block;
+  min-width: 250px;
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+input[type="submit"] {
+  display: block;
+  padding: 6px 30px;
+  font-size: 14px;
+  background-color: var(--lightred);
+  color: #fff;
+  border: none;
+}
+.message {
+  min-height: 200px;
+}
+
+/*Alerts for sending email feddback*/
+.flash {
+  padding: 16px 24px;
+  position: fixed;
+  z-index: 10;
+  right: 10px;
+  background: #1b1b1b;
+  color: #fff;
+  text-align: center;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  margin: 8px;
+}
+
+.flash-success {
+  border: 2px solid #127247;
 }
