changes in projects ui

--- a/styles.css
+++ b/styles.css
@@ -313,7 +313,7 @@
   z-index: 10;
   background: rgba(0, 0, 0, 0.5);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#50000000,endColorstr=#50000000);
-  width: 480px;
+  width: auto;
   color: #fff;
   padding: 10px;
   content: initial;
