--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   font-family: "Roboto", sans-serif;
 }
 .nav-container {
-  background-color: var(--darkgray);
+  background-color: #131414;
   position: sticky;
   z-index: 20;
   top: 0;
@@ -43,7 +43,7 @@
 }
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(6, auto);
+  grid-template-columns: repeat(5, auto);
   list-style: none;
   text-align: center;
   width: 70%;
@@ -176,27 +176,11 @@
 .main-section-text > ul > a > i {
   color: var(--white);
   margin: 15px;
-  font-size: 28px;
+  font-size: 32px;
 }
 
 .main-section-text > ul > a > i:hover {
   color: var(--brightblue);
-}
-.main-section-image {
-  height: 80vh;
-  width: 50%;
-  -webkit-filter: grayscale(1);
-  filter: gray;
-}
-/*MAIN SECTION RESPONSIVE*/
-@media screen and (max-width: 768px) {
-  .main-section-text {
-    width: 100%;
-  }
-
-  .main-section-image {
-    display: none;
-  }
 }
 
 /*About SkillS SECTION CONTAINER*/
@@ -206,16 +190,6 @@
   height: 80vh;
 }
 
-.about-skill-section-image {
-  display: flex;
-  justify-content: center;
-  width: 50%;
-  margin-left: 10%;
-}
-.about-skill-section-imagepic {
-  height: 320px;
-  margin-top: 75px;
-}
 .about-skill-section-text {
   margin-top: 75px;
   margin-right: 5%;
@@ -251,16 +225,6 @@
     align-items: center;
     height: auto;
   }
-
-  .about-skill-section-image {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-
-  .about-skill-section-imagepic {
-    height: 220px;
-    margin-top: 35px;
-  }
   .about-skill-section-text {
     margin-top: 35px;
     margin-right: 5%;
@@ -270,7 +234,7 @@
 }
 /*PROJECTS SECTION STYLES*/
 .projects-section-container {
-  background: linear-gradient(to bottom, #131414, #2d2e30);
+  background: rgba(0, 0, 0, 0.5);
   position: relative;
 }
 
