--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,7 @@
   height: 270px;
   overflow: hidden;
   margin: 35px 15px 15px 0;
+  border: 1px #131414 solid;
 }
 
 .projects-list-item > img {
@@ -315,48 +316,43 @@
     margin-top: 10px;
   }
 }
-/*footer styles*/
-footer {
-  height: 80px;
-  background: linear-gradient(to bottom, #131414, #2d2e30);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer > p {
-  color: var(--white);
-}
 
 /*contact form modal*/
 .form-modal-container {
-  display: none;
+  width: 80%;
+  margin: 0 10%;
+  max-height: 88vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*for the top*/
   position: fixed;
   overflow: auto;
+  z-index: 9;
+  top: 14vh;
+  scrollbar-color: none;
   -webkit-overflow-scrolling: touch;
-  z-index: 5;
-  top: 12vh;
-  left: 0;
-  width: 100%;
-  height: 88vh;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
 }
 .form-modal-content {
-  background-color: #fff;
   margin: 0 auto;
   padding: 8px;
-  border: 1px solid #999;
-  width: 70%;
+  background-color: #131414;
+  border: 1px solid var(--brightblue);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+.form-modal-header {
+  display: flex;
+  justify-content: space-around;
+  background-color: #0a0909;
+  color: #fff;
+  padding: 10px;
+}
 .form-modal-content > h3 {
   margin: 3%;
   text-align: center;
-  color: var(--lightgray);
+  color: var(--white);
 }
 .field {
   margin-bottom: 10px;
@@ -379,7 +375,7 @@ input[type="submit"] {
   display: block;
   padding: 6px 30px;
   font-size: 14px;
-  background-color: var(--lightred);
+  background-color: var(--brightblue);
   color: #fff;
   border: none;
 }
@@ -402,7 +398,7 @@ input[type="submit"] {
 }
 
 .flash-success {
-  border: 2px solid #127247;
+  border: 2px solid var(--brightblue);
 }
 
 #myVideo {
@@ -410,4 +406,17 @@ input[type="submit"] {
   right: 0;
   bottom: 0;
   min-width: 100%;
+}
+
+/*footer styles*/
+footer {
+  height: 80px;
+  background: linear-gradient(to bottom, #131414, #2d2e30);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer > p {
+  color: var(--white);
 }
