--- a/styles.css
+++ b/styles.css
@@ -152,15 +152,14 @@
   position: relative;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
   width: 100%;
 }
 .main-section-text {
+  color: var(--white);
   height: 100vh;
   padding-top: 25vh;
 }
 .main-section-text > h1 {
-  color: #fff;
   font-size: 35px;
   margin: 15px;
 }
@@ -401,6 +400,7 @@ input[type="submit"] {
   border: 2px solid var(--brightblue);
 }
 
+/**Bakground video styles*/
 #myVideo {
   position: fixed;
   right: 0;
