--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
   padding: 0px;
   font-family: "Roboto", sans-serif;
 }
+
+body {
+  background-color: var(--darkgray);
+}
 .nav-container {
   background-color: var(--darkgray);
   position: relative;
@@ -74,7 +78,7 @@
 
 /*MEDIAQUERYS FROM DE NAVBAR RESPONSIVE*/
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .nav-container {
     position: sticky;
   }
@@ -145,114 +149,66 @@
   }
 }
 
-/*MAIN SECTION STYLES*/
+/*particles backgorund*/
 
-.main-section-container {
-  position: relative;
-  height: 100vh;
+#particles-js {
   width: 100%;
-  background-image: url("images/wall.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-.main-section-text {
-  color: var(--white);
-  height: 100vh;
-  padding-top: 25vh;
-}
-.main-section-text > h1 {
-  font-size: 35px;
-  margin: 15px;
-}
-.main-section-text > h2 {
-  color: var(--lightred);
-  font-size: 30px;
-  margin: 15px;
+  position: fixed;
 }
 
-.main-section-text > a {
-  display: inline;
-}
-.main-icon {
-  color: var(--white);
-  margin: 15px;
-  font-size: 32px;
-}
-
-#main-email:hover {
-  color: #e94335;
-  cursor: pointer;
-}
-#main-youtube:hover {
-  color: #bb201d;
-}
-#main-github:hover {
-  color: #0a0909;
-}
-/*About SkillS SECTION CONTAINER*/
-.about-skills-section-container {
-  display: flex;
-  position: relative;
-  background: linear-gradient(to bottom, #131414, #2d2e30);
+/*Main Section*/
+.main-section-container {
+  margin-top: 20vh;
   height: 80vh;
 }
 
-.about-skill-section-text {
-  margin-top: 75px;
-  margin-right: 5%;
-  margin-left: 45px;
-}
-
-.about-skill-section-text > h1 {
+.main-section-text-container {
   color: var(--white);
-  padding: 10px;
+  margin-left: 95px;
+  width: 90%;
 }
-
-.about-skill-section-text > p {
-  color: var(--white);
-  padding: 10px;
+.main-section-text-container h1 {
+  font-size: 5em;
 }
-
-.about-skill-section-text > h3 {
+.main-section-text-container h2 {
   color: var(--lightred);
-  padding: 10px;
 }
 
-.about-skill-section-text > ul > i {
+.main-section-contact-button {
+  margin-top: 35px;
+}
+
+.btn-gradient {
   color: var(--white);
-  padding: 10px;
-  font-size: 20px;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: transparent;
+  text-decoration: none;
+  transition: 0.3s ease;
+  border: 1px solid var(--brightblue);
+  position: absolute;
 }
 
-/*ABOUT SKILL SECTION MOBILE STYLES*/
-@media screen and (max-width: 768px) {
-  .about-skills-section-container {
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-  }
-  .about-skill-section-text {
-    margin-top: 35px;
-    margin-right: 5%;
-    margin-left: 5%;
-    margin-bottom: 35px;
+.btn-gradient:hover {
+  background: var(--brightblue);
+  color: white;
+}
+
+@media screen and (max-width: 800px) {
+  .main-section-text-container {
+    margin-left: 25px;
   }
 }
+
 /*PROJECTS SECTION STYLES*/
 .projects-section-container {
-  position: relative;
-  background-image: url("images/wall.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  margin-left: 95px;
+  margin-right: 95px;
 }
 
 .projects-section-title {
   color: var(--white);
   text-align: center;
-  padding-top: 75px;
 }
 
 .projects-list-container {
@@ -261,8 +217,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   list-style-type: none;
-  margin-left: 20px;
-  margin-right: 20px;
   padding-bottom: 35px;
 }
 
@@ -277,20 +231,25 @@
 }
 
 .projects-list-item > img {
-  width: 480px;
-  height: 270px;
+  width: 100%;
+  height: 100%;
 }
 .projects-list-item-info {
   display: none;
   position: absolute;
   bottom: 0;
   z-index: 10;
-  background: rgba(0, 0, 0, 0.5);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#50000000,endColorstr=#50000000);
+  background: var(--lightgray);
+  transition: 0.3s ease;
   width: auto;
   color: #fff;
-  padding: 10px;
+  padding: 10px 10px 0 25px;
   content: initial;
+  width: 100%;
+  height: 100%;
+  line-height: 2;
+}
+.projects-list-item-info h2 {
   text-align: center;
 }
 
@@ -301,132 +260,53 @@
   text-decoration: none;
   color: var(--brightblue);
 }
+/*Links in projects cards*/
+.projects-list-item-links {
+  margin-top: 10px;
+  position: absolute;
+  bottom: 20px;
+}
+.btn-gradient-mobile {
+  color: var(--white);
+  padding: 4px 12px;
+  border-radius: 4px;
+  background: transparent;
+  text-decoration: none;
+  transition: 0.3s ease;
+  border: 1px solid var(--brightblue);
+  margin-right: 5px;
+}
+
+.btn-gradient-mobile:hover {
+  background: var(--brightblue);
+  color: var(--white);
+}
 
 /*Media querys for projects items*/
 
-@media screen and (max-width: 600px) {
-  .projects-list-item {
-    width: 300px;
-    height: 200px;
+@media screen and (max-width: 800px) {
+  .projects-section-container {
+    margin-left: 25px;
+    margin-right: 25px;
   }
-
-  .projects-list-item > img {
-    width: 300px;
-    height: 200px;
-  }
-}
-/*projects section mibile styles*/
-@media screen and (max-width: 768px) {
-  .projects-section-title {
-    padding-top: 35px;
-    font-size: 1.8em;
-  }
-
   .projects-list-container {
-    margin-top: 10px;
+    overflow-x: auto;
+    flex-wrap: nowrap;
   }
-}
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  .projects-list-item {
+    flex: 0 0 auto;
+    width: 340px;
+    height: 290px;
+  }
 
-/*contact form modal*/
-.form-modal-container {
-  width: 80%;
-  margin: 0 10%;
-  max-height: 88vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /*for the top*/
-  position: fixed;
-  overflow: auto;
-  z-index: 9;
-  top: 14vh;
-  scrollbar-color: none;
-  -webkit-overflow-scrolling: touch;
-}
-.form-modal-content {
-  margin: 0 auto;
-  padding: 8px;
-  background-color: var(--darkgray);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.form-modal-header {
-  display: flex;
-  justify-content: space-around;
-  background-color: #0a0909;
-  color: #fff;
-  padding: 10px;
-}
-.form-modal-content > h3 {
-  margin: 3%;
-  text-align: center;
-  color: var(--white);
-}
-.field {
-  margin-bottom: 10px;
-}
+  .projects-section-title {
+    text-align: left;
+  }
 
-.field label {
-  display: block;
-  font-size: 12px;
-  color: #999;
-}
-
-.field input {
-  display: block;
-  min-width: 250px;
-  line-height: 1.5;
-  font-size: 14px;
-}
-
-input[type="submit"] {
-  display: block;
-  padding: 6px 30px;
-  font-size: 14px;
-  background-color: var(--brightblue);
-  color: #fff;
-  border: none;
-}
-.message {
-  min-height: 200px;
-}
-
-/*Alerts for sending email feddback*/
-.flash {
-  padding: 16px 24px;
-  position: fixed;
-  z-index: 10;
-  right: 10px;
-  background: #1b1b1b;
-  color: #fff;
-  text-align: center;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  margin: 8px;
-}
-
-.flash-success {
-  border: 2px solid var(--brightblue);
-}
-
-/**Bakground video styles*/
-#myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-}
-
-/*footer styles*/
-footer {
-  height: 80px;
-  background: var(--darkgray);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer > p {
-  color: var(--white);
+  .projects-list-item-info {
+    padding: 10px 5px 0 10px;
+  }
 }
