--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ body {
   position: absolute;
   bottom: 0;
   z-index: 10;
-  background: var(--lightgray);
+  background: var(--darkgray);
   transition: 0.3s ease;
   width: auto;
   color: #fff;
@@ -236,6 +236,7 @@ body {
   width: 100%;
   height: 100%;
   line-height: 2;
+  border: solid 0.5px var(--brightblue);
 }
 .projects-list-item-info h2 {
   text-align: center;
@@ -275,8 +276,9 @@ body {
 @media screen and (max-width: 800px) {
   .projects-section-container {
     margin-left: 25px;
-    margin-right: 25px;
+    margin-right: 0px;
   }
+
   .projects-list-item {
     width: 340px;
     height: 290px;
@@ -296,7 +298,7 @@ body {
   }
 
   .projects-section-title {
-    text-align: center;
+    text-align: left;
   }
 
   .projects-list-item-info {
