--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,10 @@ body {
   #mobile-menu.is-active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
+
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 }
 /*particles backgorund*/
 
