--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ body {
 /*Main Section*/
 .main-section-container {
   margin-top: 20vh;
-  height: 80vh;
+  height: 100vh;
 }
 
 .main-section-text-container {
@@ -162,7 +162,7 @@ body {
   width: 90%;
 }
 .main-section-text-container h1 {
-  font-size: 5em;
+  font-size: 4em;
 }
 .main-section-text-container h2 {
   color: var(--lightred);
@@ -192,12 +192,19 @@ body {
   .main-section-text-container {
     margin-left: 25px;
   }
+  .text-last-name {
+    display: none;
+  }
+  .main-section-text-container h1 {
+    font-size: 3.5em;
+  }
 }
 
 /*PROJECTS SECTION STYLES*/
 .projects-section-container {
   margin-left: 85px;
   margin-right: 85px;
+  height: 100vh;
 }
 
 .projects-section-title {
@@ -289,6 +296,7 @@ body {
     flex: 0 0 auto;
     position: relative;
     float: none;
+    margin: 25px 20px 0px 25px;
   }
 
   .projects-list-container {
@@ -301,11 +309,11 @@ body {
     display: none;
   }
 
-  .projects-section-title {
-    text-align: left;
-  }
-
   .projects-list-item-info {
     padding: 10px 5px 0 10px;
+  }
+
+  ul {
+    padding-inline-start: 0px;
   }
 }
