--- a/styles.css
+++ b/styles.css
@@ -316,3 +316,40 @@ body {
   }
 }
 /*FOOTER STYLES*/
+#falcon {
+  animation: myfirst 8s ease;
+  position: absolute;
+  width: 250px;
+  top: 10%;
+  left: 35%;
+}
+
+#astronaut {
+  animation: myanim 4s infinite;
+  position: absolute;
+  width: 250px;
+  top: 10%;
+  left: 35%;
+  display: none;
+}
+
+@keyframes myfirst {
+  0% {
+    top: -20%;
+    left: 5%;
+  }
+
+  50% {
+    top: 10%;
+    left: 35%;
+  }
+  100% {
+    top: 10%;
+    left: 35%;
+  }
+}
+@keyframes myanim {
+  30% {
+    margin-top: 30px;
+  }
+}
