--- a/css/project.css
+++ b/css/project.css
@@ -9,6 +9,7 @@
 .projects-section-title {
   color: var(--white);
   text-align: center;
+  margin-top: 15vh;
 }
 
 .projects-list-container {
@@ -25,7 +26,7 @@
   position: relative;
   float: left;
   width: 300px;
-  height: 290px;
+  height: 250px;
   margin: 25px 20px 20px 25px;
   border: 1px #131414 solid;
 }
@@ -52,6 +53,13 @@
 }
 .projects-list-item-info h2 {
   text-align: center;
+}
+.projects-list-item-info h4 {
+  line-height: 1.2;
+}
+.projects-list-item-info p {
+  margin-top: 8px;
+  line-height: 1.2;
 }
 
 .projects-list-item:hover .projects-list-item-info {
@@ -94,8 +102,8 @@
   }
 
   .projects-list-item {
-    width: 390px;
-    height: 240px;
+    width: 380px;
+    height: 220px;
     flex: 0 0 auto;
     position: relative;
     margin: 25px 20px 0px 0px;
@@ -133,7 +141,7 @@
 .main-projects-list-item {
   position: relative;
   width: 980px;
-  height: 200px;
+  height: 180px;
   margin-top: 25px;
   margin: 25px 20px 20px 25px;
   border: 1px #131414 solid;
@@ -176,7 +184,7 @@
 @media screen and (max-width: 800px) {
   .main-projects-list-item {
     width: 90%;
-    height: 280px;
+    height: 220px;
     position: relative;
     float: none;
   }
