--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,5 @@
 @import "./animations.css";
 @import "./projectNavegation.css";
 @import "./about.css";
+@import "./form.css";
+@import "./footer.css";
