--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,6 +16,9 @@
   max-width: 1720px;
   margin: 0 auto;
 }
+/* .navbar a {
+  text-decoration: none;
+} */
 
 #navbar-logo {
   color: var(--white);
@@ -27,6 +30,7 @@
 #navbar-logo:hover {
   cursor: pointer;
   color: var(--brightblue);
+  transition: all 0.2s ease-out;
 }
 .nav-menu {
   display: grid;
