--- a/css/about.css
+++ b/css/about.css
@@ -27,6 +27,7 @@
 .about-section-text {
   margin-top: 20px;
   font-size: 1rem;
+  max-width: 460px;
 }
 .about-section-text-img {
   height: 50px;
