--- a/css/project.css
+++ b/css/project.css
@@ -1,9 +1,8 @@
 /*PROJECTS SECTION STYLES*/
 .projects-section-container {
-  margin-left: 85px;
-  margin-right: 85px;
   display: flex;
   justify-content: center;
+  margin-top: 10vh;
 }
 
 .projects-section-title {
@@ -13,27 +12,35 @@
 
 .projects-list-container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap; /* Keep items in a single row */
   list-style-type: none;
-  justify-content: center;
+  justify-content: flex-start; /* Start from left */
+  overflow-x: auto; /* Enable horizontal scrolling */
   max-width: 1720px;
-  scroll-behavior: smooth;
+  /* Set the desired maximum height for the container */
+  max-height: 400px;
+  scrollbar-color: var(--brightblue) var(--darkgray);
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 .projects-list-item {
   position: relative;
-  float: left;
-  width: 440px;
-  height: 220px;
+  width: 310px;
+  height: 330px;
   margin: 25px 20px 20px 25px;
   border: 1px #131414 solid;
+  flex: 0 0 auto; /* Disable item shrinking */
+  border-radius: 20px;
 }
 
 .projects-list-item > img {
   width: 100%;
   height: 100%;
+  border-radius: 20px;
 }
+
 .projects-list-item-info {
   display: none;
   position: absolute;
@@ -49,13 +56,17 @@
   height: 100%;
   line-height: 2;
   border: solid 0.5px var(--brightblue);
+  border-radius: 20px;
 }
+
 .projects-list-item-info h2 {
   text-align: center;
 }
+
 .projects-list-item-info h4 {
   line-height: 1.2;
 }
+
 .projects-list-item-info p {
   margin-top: 8px;
   line-height: 1.2;
@@ -64,6 +75,7 @@
 .projects-list-item:hover .projects-list-item-info {
   display: block;
 }
+
 .projects-list-item-info-link {
   text-decoration: none;
   color: var(--brightblue);
@@ -75,6 +87,7 @@
   position: absolute;
   bottom: 20px;
 }
+
 .btn-gradient-mobile {
   color: var(--white);
   padding: 4px 12px;
@@ -91,118 +104,17 @@
   color: var(--white);
 }
 
-/*Media querys for projects items*/
-@media screen and (max-width: 1139px) {
-  .projects-section-container {
-    margin-left: 10px;
-
-    width: 98%;
-  }
-
-  .projects-list-item {
-    width: 380px;
-    height: 220px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .projects-section-container {
-    margin-left: 25px;
-    margin-right: 0px;
-    width: 90%;
-  }
-
-  .projects-list-item {
-    width: 380px;
-    height: 220px;
-    flex: 0 0 auto;
-    position: relative;
-    margin: 25px 20px 0px 0px;
-  }
-
-  .projects-list-container {
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    justify-content: unset;
-  }
-
-  ::-webkit-scrollbar {
-    display: none;
-  }
-
-  .projects-list-item-info {
-    padding: 10px 5px 0 10px;
-  }
-
-  ul {
-    padding-inline-start: 0px;
-  }
-}
-
-/*main-project-list-container*/
-
-.main-projects-section-container {
-  display: flex;
-  justify-content: center;
-}
-.main-projects-list-container {
-  list-style-type: none;
-}
-
-.main-projects-list-item {
-  position: relative;
-  width: 920px;
-  height: 180px;
-  margin-top: 25px;
-  margin: 25px 20px 20px 25px;
-  border: 1px #131414 solid;
-  background-color: #ead430;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.main-projects-list-item h1 {
-  font-family: "Special Elite", cursive;
-}
-
-.main-projects-list-item-info {
-  display: none;
-  position: absolute;
-  bottom: 0;
-  z-index: 10;
-  background: var(--darkgray);
-  transition: 0.3s ease;
-  width: auto;
-  color: #fff;
-
-  content: initial;
-  width: 100%;
-  height: 100%;
-  line-height: 2;
-  border: solid 0.5px var(--brightblue);
-}
 .projects-list-item-info h2 {
   text-align: center;
 }
+
 .main-projects-list-item:hover .projects-list-item-info {
   display: block;
 }
+
 .main-projects-list-item-info-link {
   text-decoration: none;
   color: var(--brightblue);
-}
-
-@media screen and (max-width: 800px) {
-  .main-projects-list-item {
-    width: 90%;
-    height: 220px;
-    position: relative;
-    float: none;
-  }
-
-  ul {
-    padding-inline-start: 0px;
-  }
 }
 
 .personal-projects-container {
@@ -214,6 +126,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .personal-project-icon {
   height: 40px;
   margin-left: 5px;
