--- a/css/mainSection.css
+++ b/css/mainSection.css
@@ -1,17 +1,18 @@
 /*Main Section*/
 .main-section-container {
-  margin-top: 20vh;
-  height: 100vh;
   display: flex;
   justify-content: center;
+  height: 80vh;
 }
 
 .main-section-text-container {
   color: var(--white);
-  margin-right: 14%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .main-section-text-container h1 {
-  font-size: 4em;
+  font-size: 5.5vw;
 }
 .main-section-text-container h2 {
   color: var(--lightred);
@@ -38,13 +39,6 @@
 }
 
 @media screen and (max-width: 800px) {
-  .main-section-container {
-    margin-top: 30vh;
-  }
-  .main-section-text-container {
-    margin-left: 25px;
-  }
-
   .main-section-text-container h1 {
     font-size: 3.5em;
   }
