--- a/css/project.css
+++ b/css/project.css
@@ -20,6 +20,7 @@
   /* Set the desired maximum height for the container */
   max-height: 400px;
   scrollbar-color: var(--brightblue) var(--darkgray);
+  scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
   display: none;
@@ -27,8 +28,8 @@
 
 .projects-list-item {
   position: relative;
-  width: 310px;
-  height: 330px;
+  width: 300px;
+  height: 320px;
   margin: 25px 20px 20px 25px;
   border: 1px #131414 solid;
   flex: 0 0 auto; /* Disable item shrinking */
